<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_account_background"
    tools:context=".view.CreateAccountFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/logoGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieLoadingAnimationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/earth_loading" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_separation_loading_layout"
            android:text="@string/loading_label"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/loading_fragment_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/lottieLoadingAnimationView"
            app:layout_constraintStart_toStartOf="@+id/lottieLoadingAnimationView"
            app:layout_constraintTop_toBottomOf="@+id/lottieLoadingAnimationView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/logInEmailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email_address_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/logInPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTextView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/logInPasswordEditText"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/createConfirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInEmailEditText"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAccountLogoImageView"
        app:layout_constraintTop_toTopOf="@+id/logoGuideline" />

    <ImageView
        android:id="@+id/newAccountLogoImageView"
        android:layout_width="@dimen/logo_size_login_screen"
        android:layout_height="@dimen/logo_size_login_screen"
        android:contentDescription="@string/app_logo_content_description"
        android:src="@drawable/earth"
        app:layout_constraintBottom_toTopOf="@+id/logoGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/createCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/indian_red"
        android:text="@string/cancel_message"
        app:layout_constraintEnd_toEndOf="@+id/logInPasswordEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/logInPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/createConfirmButton"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/createConfirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/light_coral"
        android:text="@string/confirm_mesage"
        app:layout_constraintBottom_toTopOf="@+id/createCancelButton"
        app:layout_constraintEnd_toEndOf="@+id/logInPasswordEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/logInPasswordEditText"
        app:layout_constraintTop_toTopOf="@+id/buttonGuideline" />

</androidx.constraintlayout.widget.ConstraintLayout>