<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/password_recovery_background"
    tools:context=".view.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/logoGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieLoadingAnimationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/earth_loading" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_separation_loading_layout"
            android:text="@string/loading_label"
            android:textAlignment="center"
            android:textSize="@dimen/loading_fragment_text_size"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/lottieLoadingAnimationView"
            app:layout_constraintStart_toStartOf="@+id/lottieLoadingAnimationView"
            app:layout_constraintTop_toBottomOf="@+id/lottieLoadingAnimationView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/passwordRecoveryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forgot_password_margins"
        android:text="@string/password_recovery_label"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logoGuideline" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/logo_size_login_screen"
        android:layout_height="@dimen/logo_size_login_screen"
        android:contentDescription="@string/app_logo_content_description"
        android:src="@drawable/earth"
        app:layout_constraintBottom_toTopOf="@+id/logoGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_edit_texts_margins"
        android:layout_marginEnd="@dimen/login_edit_texts_margins"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="@dimen/drawable_padding_edit_text_icons"
        android:hint="@string/email_address_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/min_height_edit_text"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRecoveryTextView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/passwordConfirmButton"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:background="@color/light_coral"
        android:text="@string/confirm_mesage"
        app:layout_constraintBottom_toTopOf="@+id/passwordCancelButton"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintTop_toTopOf="@+id/buttonGuideline" />

    <Button
        android:id="@+id/passwordCancelButton"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forgot_password_margins"
        android:background="@color/indian_red"
        android:text="@string/cancel_message"
        app:layout_constraintEnd_toEndOf="@+id/passwordConfirmButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/passwordConfirmButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmButton"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>