<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.WonderDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/wonderDetailImageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/wonder_detail_image_height"
            android:contentDescription="@string/wonder_image_content_description"
            android:src="@drawable/imagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wonderTitleTextView"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_detail_margin"
            android:layout_marginTop="@dimen/fragment_detail_margin"
            android:layout_marginEnd="@dimen/fragment_detail_margin"
            android:textSize="@dimen/fragment_detail_title_text_size"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wonderDetailImageView"
            tools:text="Nombre" />

        <TextView
            android:id="@+id/wonderDescriptionTextView"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_detail_margin"
            android:textSize="@dimen/fragment_detail_content_text_size"
            app:layout_constraintEnd_toEndOf="@+id/wonderTitleTextView"
            app:layout_constraintStart_toStartOf="@+id/wonderTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/wonderTitleTextView"
            tools:text="Descripción" />

        <TextView
            android:id="@+id/locationTitleTextView"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_detail_margin"
            android:text="@string/location_label"
            android:textSize="@dimen/fragment_detail_title_text_size"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@+id/wonderTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/wonderDescriptionTextView" />

        <ImageView
            android:id="@+id/flagImageView"
            android:layout_width="@dimen/fragment_detail_flag_width"
            android:layout_height="@dimen/fragment_detail_flag_height"
            android:contentDescription="@string/flag_content_description"
            android:layout_marginTop="@dimen/fragment_detail_margin"
            android:src="@drawable/bandera"
            app:layout_constraintStart_toStartOf="@+id/locationTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/locationTitleTextView" />

        <TextView
            android:id="@+id/wonderDetailLocationTextView"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_detail_margin"
            android:textSize="@dimen/fragment_detail_content_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/flagImageView"
            app:layout_constraintEnd_toEndOf="@+id/wonderDescriptionTextView"
            app:layout_constraintStart_toEndOf="@+id/flagImageView"
            app:layout_constraintTop_toTopOf="@+id/flagImageView"
            tools:text="Ciudad, País" />

        <WebView
            android:id="@+id/mapWebView"
            android:layout_width="0dp"
            android:layout_height="@dimen/map_view_height"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/wonderDetailLocationTextView"
            app:layout_constraintStart_toStartOf="@+id/flagImageView"
            app:layout_constraintTop_toBottomOf="@+id/flagImageView"
            tools:ignore="WebViewLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>